Add a new SigScan_static target
* For extract-tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,14 @@ set(SRCS src/main.cpp src/SigScan.cpp)
 set(LIBS Boost::program_options)
 
 set(CMAKE_CXX_STANDARD 17)
+set(Boost_USE_STATIC_LIBS ON)
 
 find_package(Boost COMPONENTS program_options REQUIRED)
 
 add_executable(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} ${LIBS})
+
+if (NOT APPLE)
+    add_executable(${PROJECT_NAME}_static ${SRCS})
+    target_link_libraries(${PROJECT_NAME}_static -static ${LIBS})
+endif()
